# Marabou

./: .buildinfo  .clang-format  .codecov.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  ArtifactReadme.txt  CHANGELOG.md  CMakeLists.txt  COPYING  CompareVersionsPerformance.py  MANIFEST.in  Makefile  Places.mk  Questions and observations.txt  README.md  Results.txt  Rules.mk  THANKS  Test_NetworkLevelReasoner.h  build_marabou.sh  genindex.html  how_to_run_experiment.md  index.html  objects.inv  paper_note.txt  py-modindex.html  pyproject.toml  run_marabou_ipq.sh  search.html  searchindex.js  setup.py  test_ipq  travis.yaml
regress/: .gitignore  CMakeLists.txt  GlobalConfiguration.cpp  Makefile  RegressUtils.h  abs_feasible_1.h  abs_feasible_2.h  abs_feasible_3.h  acas_1_1_fixed_input.h  acas_1_1_no_constraints.h  acas_2_2_fixed_input.h  acas_abs_constraints.h  acas_abs_fixed_input.h  lp_feasible_1.h  lp_feasible_2.h  lp_infeasible_1.h  main_regress.cpp  max_feasible_1.h  max_infeasible_1.h  max_relu_feasible_1.h  mps_lp_feasible_1.h  mps_lp_infeasible_1.h  relu_feasible_1.h  relu_feasible_2.h  run_regression.py
regress/acas_nnet/: ACASXU_run2a_1_1_batch_2000.nnet  ACASXU_run2a_1_2_batch_2000.nnet  ACASXU_run2a_1_3_batch_2000.nnet  ACASXU_run2a_1_4_batch_2000.nnet  ACASXU_run2a_1_5_batch_2000.nnet  ACASXU_run2a_1_6_batch_2000.nnet  ACASXU_run2a_1_7_batch_2000.nnet  ACASXU_run2a_1_8_batch_2000.nnet  ACASXU_run2a_1_9_batch_2000.nnet  ACASXU_run2a_2_1_batch_2000.nnet  ACASXU_run2a_2_2_batch_2000.nnet  ACASXU_run2a_2_3_batch_2000.nnet  ACASXU_run2a_2_4_batch_2000.nnet  ACASXU_run2a_2_5_batch_2000.nnet  ACASXU_run2a_2_6_batch_2000.nnet  ACASXU_run2a_2_7_batch_2000.nnet  ACASXU_run2a_2_8_batch_2000.nnet  ACASXU_run2a_2_9_batch_2000.nnet  ACASXU_run2a_3_1_batch_2000.nnet  ACASXU_run2a_3_2_batch_2000.nnet  ACASXU_run2a_3_3_batch_2000.nnet  ACASXU_run2a_3_4_batch_2000.nnet  ACASXU_run2a_3_5_batch_2000.nnet  ACASXU_run2a_3_6_batch_2000.nnet  ACASXU_run2a_3_7_batch_2000.nnet  ACASXU_run2a_3_8_batch_2000.nnet  ACASXU_run2a_3_9_batch_2000.nnet  ACASXU_run2a_4_1_batch_2000.nnet  ACASXU_run2a_4_2_batch_2000.nnet  ACASXU_run2a_4_3_batch_2000.nnet  ACASXU_run2a_4_4_batch_2000.nnet  ACASXU_run2a_4_5_batch_2000.nnet  ACASXU_run2a_4_6_batch_2000.nnet  ACASXU_run2a_4_7_batch_2000.nnet  ACASXU_run2a_4_8_batch_2000.nnet  ACASXU_run2a_4_9_batch_2000.nnet  ACASXU_run2a_5_1_batch_2000.nnet  ACASXU_run2a_5_2_batch_2000.nnet  ACASXU_run2a_5_3_batch_2000.nnet  ACASXU_run2a_5_4_batch_2000.nnet  (+5 more)
regress/regress0/: CMakeLists.txt
regress/regress1/: CMakeLists.txt
regress/regress2/: CMakeLists.txt
src/: CMakeLists.txt  GPATH  GRTAGS  GTAGS  Makefile  Rules.mk
src/basis_factorization/: .gitignore  AlmostDiagonalMatrix.cpp  AlmostDiagonalMatrix.h  AlmostIdentityMatrix.h  BasisFactorization.cpp  BasisFactorization.h  BasisFactorizationError.h  BasisFactorizationFactory.cpp  BasisFactorizationFactory.h  CMakeLists.txt  CSRMatrix.cpp  CSRMatrix.h  DenseMatrix.cpp  DenseMatrix.h  EtaMatrix.cpp  EtaMatrix.h  ForrestTomlinFactorization.cpp  ForrestTomlinFactorization.h  GaussianEliminator.cpp  GaussianEliminator.h  IBasisFactorization.h  LPElement.cpp  LPElement.h  LUFactorization.cpp  LUFactorization.h  LUFactors.cpp  LUFactors.h  MalformedBasisException.h  PermutationMatrix.cpp  PermutationMatrix.h  Sources.mk  SparseColumnsOfBasis.cpp  SparseColumnsOfBasis.h  SparseEtaMatrix.cpp  SparseEtaMatrix.h  SparseFTFactorization.cpp  SparseFTFactorization.h  SparseGaussianEliminator.cpp  SparseGaussianEliminator.h  SparseLUFactorization.cpp  (+20 more)
src/cdcl/: CMakeLists.txt  CadicalWrapper.cpp  CadicalWrapper.h  CdclCore.cpp  CdclCore.h  GroundBoundManager.cpp  GroundBoundManager.h  SatSolverWrapper.h
src/cegar/: CMakeLists.txt  IncrementalLinearization.cpp  IncrementalLinearization.h
src/common/: .gitignore  AutoFile.h  CDMap.h  CMakeLists.txt  CommonError.h  ConstSimpleData.cpp  ConstSimpleData.h  CrossPlatform.h  Debug.h  Either.h  Error.cpp  Error.h  File.cpp  File.h  FloatUtils.cpp  FloatUtils.h  GammaUnsat.cpp  GammaUnsat.h  GetCPUData.h  GurobiWrapper.cpp  GurobiWrapper.h  HashMap.h  HashSet.h  HeapData.cpp  HeapData.h  IFile.cpp  IFile.h  LPSolverType.h  LinearExpression.cpp  LinearExpression.h  List.h  MString.cpp  MString.h  MStringf.h  Makefile  Map.h  MatrixMultiplication.cpp  MatrixMultiplication.h  Optional.h  Pair.h  (+20 more)
src/configuration/: CMakeLists.txt  ConfigurationError.h  GlobalConfiguration.cpp  GlobalConfiguration.h  OptionParser.cpp  OptionParser.h  Options.cpp  Options.h  Sources.mk
src/engine/: .gitignore  AbsConstraint.cpp  AbsConstraint.h  AbsError.h  AbsoluteValueConstraint.cpp  AbsoluteValueConstraint.h  AbstractionManager.cpp  AbstractionManager.h  ActivationPatternSampler.cpp  ActivationPatternSampler.h  ActivationSignature.cpp  ActivationSignature.h  AutoConstraintBoundTightener.h  AutoConstraintMatrixAnalyzer.h  AutoCostFunctionManager.h  AutoProjectedSteepestEdge.h  AutoRowBoundTightener.h  AutoTableau.h  BaBsrHeuristicDivider.cpp  BaBsrHeuristicDivider.h  BasisFactorization.cpp  BasisFactorization.h  BiasStrategy.h  BilinearConstraint.cpp  BilinearConstraint.h  BlandsRule.cpp  BlandsRule.h  BoundExplainer.cpp  BoundExplainer.h  BoundManager.cpp  BoundManager.h  BoundTighteningType.h  BoundsExplainer.cpp  BoundsExplainer.h  BoundsExplanator.cpp  BoundsExplanator.h  CDSearchTreeHandler.cpp  CDSearchTreeHandler.h  CDSmtCore.cpp  CDSmtCore.h  (+214 more)
src/include/: CMakeLists.txt  cvc5_private.h  cvc5_private_library.h  cvc5_public.h
src/input_parsers/: .gitignore  AcasNeuralNetwork.cpp  AcasNeuralNetwork.h  AcasNnet.cpp  AcasNnet.h  AcasParser.cpp  AcasParser.h  BerkeleyNeuralNetwork.cpp  BerkeleyNeuralNetwork.h  BerkeleyParser.cpp  BerkeleyParser.h  CMakeLists.txt  FixedReluParser.cpp  FixedReluParser.h  InputParserError.h  InputQueryBuilder.cpp  InputQueryBuilder.h  Makefile  MpsParser.cpp  MpsParser.h  NetworkParser.cpp  NetworkParser.h  OnnxParser.cpp  OnnxParser.h  PropertyParser.cpp  PropertyParser.h  Sources.mk  TensorUtils.cpp  TensorUtils.h  (+8 more)
(+6345 files in other folders)
